[package]
name = "rust-grpc-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
yellowstone-grpc-client = "10.2.0"
yellowstone-grpc-proto = "10.1.1"
bs58 = "0.5.1"
tracing = "0.1"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
rustls = { version = "0.23", features = ["aws-lc-rs"] }
tokio-stream = "0.1"
bincode = "1.3"

